renovate-deployment.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: renovate
---
# Le secret renovate-github-token doit être créé AVANT avec kubectl:
# kubectl create secret generic renovate-github-token --from-literal=token=VOTRE_GITHUB_PAT -n renovate
# IMPORTANT: Ne jamais committer de secrets dans Git !
