resilient-app-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: resilient-app
  labels:
    app: resilient-app
spec:
  selector:
    app: resilient-app
  ports:
  - port: 80
    targetPort: 80
    protocol: TCP
  type: ClusterIP
---
apiVersion: v1
kind: Service
metadata:
  name: resilient-app-nodeport
  labels:
    app: resilient-app
spec:
  selector:
    app: resilient-app
  ports:
  - port: 80
    targetPort: 80
    nodePort: 30080
    protocol: TCP
  type: NodePort
